<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Parameters">

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title_notif"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/NOTIFICATIONS"
                android:textSize="32dp"/>
            <CheckBox
                android:id="@+id/notif_push"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Notifications_push" />
            <CheckBox
                android:id="@+id/notif_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Notifications_email" />

            <TextView
                android:id="@+id/title_autorisations"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/AUTORISATIONS"
                android:textSize="32dp"/>
            <CheckBox
                android:id="@+id/autorisations_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Appareil_photo" />
            <CheckBox
                android:id="@+id/autorisations_localisation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Localisation" />
            <CheckBox
                android:id="@+id/autorisations_appels"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Appels_telephoniques" />
            <CheckBox
                android:id="@+id/autorisations_messages"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/Messages_SMS" />
    </LinearLayout>


</RelativeLayout>
