<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".HorairesZooFragment">
    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>
    <TextView
            android:text="@string/horaires_spectacles_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"/>


    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:layout_marginHorizontal="15dp">


        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_nom_spectacle1"
                    android:layout_margin="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#003B5B"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>


        </TableRow>
        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_spectacle1"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </TableRow>
    </TableLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:layout_marginHorizontal="15dp">


        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_nom_spectacle2"
                    android:layout_margin="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#003B5B"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>


        </TableRow>
        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_spectacle2"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </TableRow>
    </TableLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:layout_marginHorizontal="15dp">


        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_nom_spectacle3"
                    android:layout_margin="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#003B5B"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>


        </TableRow>
        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_spectacle3"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </TableRow>
    </TableLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0"
            android:layout_marginHorizontal="15dp">


        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_nom_spectacle4"
                    android:layout_margin="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#003B5B"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>


        </TableRow>
        <TableRow
                android:background="#000000"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_spectacle4"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </TableRow>
    </TableLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>

</LinearLayout>