<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              tools:context=".HorairesRestaurantFragment">
    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    <TextView
            android:text="@string/horaires_restaurants_titre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="32sp"
            android:layout_gravity="center"/>

    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>


    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0, 1"
            android:layout_marginHorizontal="15dp">

        <TableRow
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_text_restaurant1"
                    android:layout_marginTop="1dp"
                    android:layout_marginHorizontal="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:background="@color/steelblue"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </TableRow>


        <TableRow
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_text_ouverture"
                    android:layout_margin="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="@color/steelblue"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_text_fermeture"
                    android:layout_marginEnd="1dp"
                    android:layout_marginVertical="1dp"
                    android:layout_column="1"
                    android:background="@color/steelblue"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"/>

        </TableRow>
        <TableRow
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_restaurant1_ouverture"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingVertical="3dp"
                    android:layout_column="0"
                    android:background="@color/blue_dark"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/horaires_restaurant1_fermeture"
                    android:layout_column="1"
                    android:background="@color/blue_dark"
                    android:gravity="center"
                    android:textStyle="bold"/>
        </TableRow>
    </TableLayout>

    <Space android:layout_width="match_parent"
           android:layout_height="0dp"
           android:layout_weight="1"/>

    <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:stretchColumns="0, 1"
            android:layout_marginHorizontal="15dp">

        <TableRow
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_text_restaurant2"
                    android:layout_marginTop="1dp"
                    android:layout_marginHorizontal="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:layout_span="2"
                    android:background="@color/steelblue"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>

        </TableRow>


        <TableRow
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_text_ouverture"
                    android:layout_margin="1dp"
                    android:paddingVertical="5dp"
                    android:layout_column="0"
                    android:background="@color/steelblue"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_text_fermeture"
                    android:layout_marginEnd="1dp"
                    android:layout_marginVertical="1dp"
                    android:layout_column="1"
                    android:background="@color/steelblue"
                    android:textColor="@color/white"
                    android:gravity="center"
                    android:textStyle="bold"/>

        </TableRow>
        <TableRow
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">
            <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/horaires_restaurant2_ouverture"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginBottom="1dp"
                    android:paddingVertical="3dp"
                    android:layout_column="0"
                    android:background="@color/blue_dark"
                    android:textStyle="bold"
                    android:gravity="center"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="1dp"
                    android:text="@string/horaires_restaurant2_fermeture"
                    android:layout_column="1"
                    android:background="@color/blue_dark"
                    android:gravity="center"
                    android:textStyle="bold"/>
        </TableRow>
    </TableLayout>
    <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"/>

</LinearLayout>